# oddor_shifter_hid_driver

./: .gitignore  99-oddor-shifter.hwdb  99-oddor-shifter.rules  CMakeLists.txt  README.md  main.c  oddor-driver.service  oddor_shifter_hid_driver
